examples/type_system/failing/55_strict_any_return_rejected.flx
public fn id(x: Int) -> Any {
    x
}

fn main() -> Unit {
}
